/**********
 * Author:  Y.Nakaue
 * Created: 2023/05/26
 * Edited:  2023/05/26
 **********/

#pragma once

class Media
{
public:
    virtual void draw() = 0;
};
