/**********
 * Author:  Y.Nakaue
 * Created: 2023/04/09
 * Edited:  2023/04/09
 **********/

#pragma once

#include "MenuItem.h"

class MenuItem_Audio : public MenuItem
{
public:
    void draw() override;
};
